added temperature elements

--- a/src/style.css
+++ b/src/style.css
@@ -6,21 +6,20 @@ h1 {
 .fahrenheit {
   font-size: 20px;
 }
+.first-column {
+  font-size: 50px;
+}
 .weather-app {
   font-family: "roboto mono", monospace;
+  max-width: 600px;
 
   margin: 0 auto;
   border: 1px solid rgba(0, 0, 0, 0.281);
   border-radius: 10px;
-  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
 
-.first-column {
-  font-size: 60px;
-}
-.second-column {
-  font-size: 40px;
-}
 .row {
   padding: 5px;
 }
