--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
 h1 {
-  color: blue;
+  color: #31d2f2;
   font-size: 34px;
-  font-weight: bold;
 }
 
 a {
@@ -9,22 +8,24 @@ a {
 }
 
 .large-icon {
-  width: 200px;
+  width: 100px;
 }
 
 .fahrenheit {
   font-size: 20px;
 }
 .temperature {
-  font-size: 100px;
+  font-size: 70px;
+  font-weight: 600;
 }
 .weather-app {
   font-family: "roboto mono", monospace;
   max-width: 600px;
-
+  background-color: white;
   margin: 0 auto;
   margin-top: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.281);
+  border: none;
+  box-shadow: 12px 9px 18px 8px rgba(0, 0, 0, 0.21);
   border-radius: 10px;
   padding-top: 20px;
   padding-bottom: 30px;
@@ -32,6 +33,9 @@ a {
 
 .row {
   padding-top: 20px;
+}
+.search-input {
+  border: 2px solid #4aa8b3;
 }
 .weather-forecast {
   text-align: center;
